fixed overflow on about page

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 body{
   font-size: 24px;
   font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
 }
 
 
